fixing dialog height  on mobile mode, add description for piece of code

--- a/sass/components/_categorical-display.scss
+++ b/sass/components/_categorical-display.scss
@@ -338,7 +338,7 @@
         }
         .cq-scroll-panel{
             width: 100%;
-            height: calc( 100vh - 7.8em );
+            height: calc( 100vh - 13em );
         }
         .cq-filter-panel{
             display: flex;
